syntax = "proto3";

package weather.v1;

message WeatherData {
  message TimeInfo {
    int32 hours = 1;
    int32 minutes = 2;
  }

  message DateInfo {
    string day_of_week = 1;
    string month = 2;
    int32 day = 3;
    int32 year = 4;
  }

  message WeatherInfo {
    float temperature = 1;
    float humidity = 2;
    float pressure = 3;
    float wind_speed = 4;
    float wind_direction = 5;
    float rain_last_hour = 6;
    float solar_radiation = 7;
    float humidex = 8;
    float dew_point = 9;
    float wind_chill = 10;
    int32 snow_depth = 11;
  }

  TimeInfo time = 1;
  DateInfo date = 2;
  WeatherInfo weather = 3;
}
